@@ -1,3 +1,9 @@
+Wed Feb  3 09:57:14 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
+
+	* installdir/nomatch.html: Fix small typo.
+
+	* htdoc/RELEASE.html: Finish up 3.1.0 release notes.
+
 Wed Feb  3 14:22:11 1999  Alexander Bergolth  <leo@leo.wu-wien.ac.at>
 
 	* htsearch/Display.cc(setVariables): Removed some of yesterdays
@@ -8,6 +14,8 @@ Tue Feb  2 17:26:06 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>
 	* htdig/PDF.h, htdig/PDF.cc: Fix problems with PDFs generated by
 	CorelDraw.
 
+	* htdoc/attrs.html: Fixed small typo.
+	
 Tue Feb  2 21:02:25 1999  Alexander Bergolth  <leo@leo.wu-wien.ac.at>
 
 	* htsearch/Display.cc(setVariables,createURL): As pointed out by
